--- a/mision.html
+++ b/mision.html
@@ -5,7 +5,7 @@
 <title> Hotel Quinta Dalam </title>
 </head>
 <body bgcolor="#d6d7c6" text="#000000">
-<center><table width="950"><tr><td>
+<center><table width="1100"><tr><td>
 
 <img src ="imagenes/logo.jpg"width="120">
 <a href="index.html">
@@ -14,6 +14,8 @@
 <img src="menu/mision.png"width="180"></a>
 <a href="vision.html">
 <img src="menu/vision.png"width="180"></a>
+<a href="catalogo.html">
+<img src="menu/catalogo.png"width="180"></a>
 <a href="contacto.html">
 <img src="menu/contacto.png"width="180"></a>
 
