--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <a href="vision.html">
 <img src="menu/vision.png"width="180"></a>
 <a href="catalogo.html">
-<img src="menu/catalogo.png"width="180"></a>
+<img src="menu/catalogo.png"width="180" height="47"></a>
 <a href="contacto.html">
 <img src="menu/contacto.png"width="180"></a>
 
